# A2A_V2

./: DEVELOPMENT.md  README.md  README_VIBE.md  a2a_integration.py  app.py  assistant_core.py  config.py  coverage.xml  logging_config.py  pyproject.toml  requirements.txt  run.bat  setup.py
agents/: __init__.py  agent_base.py  agent_manager.py  agent_protocol.py  coordinator_agent.py  document_writer_agent.py  domain_expert_agent.py  email_agent.py  error_handler.py  persona_selector_agent.py  prompt_engineer_agent.py  qa_assistant_agent.py  research_agent.py  voice_agent.py
configs/: prompt_loader.py  ui_config_loader.py
configs/prompts/: app_system.yaml  coordinator.yaml  document_writer.yaml  email_analysis_preamble.yaml  email_reply_preamble.yaml  research.yaml  subtasks.yaml  subtasks_fallback.yaml  voice_tts.yaml
configs/ui/: prompt_options.yaml
files/2025-08-12/: war_TEST.xlsx
htmlcov/: a2a_integration_py.html  app_py.html  assistant_core_py.html  class_index.html  config_py.html  function_index.html  index.html  logging_config_py.html  setup_py.html  status.json  z_10c5d8aa0c582818___init___py.html  z_10c5d8aa0c582818_prompt_loader_py.html  z_10c5d8aa0c582818_ui_config_loader_py.html  z_19b8bf288843bf35___init___py.html  z_19b8bf288843bf35_actions_py.html  z_19b8bf288843bf35_analysis_py.html  z_19b8bf288843bf35_chat_py.html  z_19b8bf288843bf35_common_py.html  z_19b8bf288843bf35_document_py.html  z_19b8bf288843bf35_email_py.html  z_19b8bf288843bf35_sidebar_py.html  z_19b8bf288843bf35_voice_py.html  z_3f0fae09517860b4___init___py.html  z_3f0fae09517860b4_core_py.html  z_513b4715aa21b404___init___py.html  z_513b4715aa21b404_core_py.html  z_5fabe81cd52493db___init___py.html  z_5fabe81cd52493db_configs_py.html  z_5fabe81cd52493db_core_py.html  z_5fabe81cd52493db_utils_py.html  z_64749e2b68865be7___init___py.html  z_64749e2b68865be7_display_helpers_py.html  z_64749e2b68865be7_prompt_ui_py.html  z_894e69fc03b9bda4___init___py.html  z_894e69fc03b9bda4_data_py.html  z_894e69fc03b9bda4_repository_py.html  z_931ec821afc360c4___init___py.html  z_931ec821afc360c4_core_py.html  z_9889675b19ca028b___init___py.html  z_9889675b19ca028b_core_py.html  (+7 more)
tests/: conftest.py  test_coordinator_persona_integration.py  test_document_writer_agent.py  test_email_agent.py  test_persona_ranking_selector.py  test_research_agent.py  test_voice_agent.py
tools/: notion_utils.py  tool_interface.py
tools/data_analysis/: __init__.py  chart_generator.py  core.py  insight_extractor.py
tools/document_formatter/: __init__.py  core.py
tools/email_tool/: __init__.py  auth.py  configs.py  core.py  utils.py
tools/planning_tool/: __init__.py  configs.py  core.py  prompts.py
tools/prompt_tool/: core.py
tools/summarization_tool/: __init__.py  configs.py  core.py  utils.py
tools/template_generator/: __init__.py  core.py
tools/tool_template/: core.py
tools/voice_tool/: __init__.py  configs.py  core.py  utils.py
tools/web_search/: __init__.py  core.py
ui/: __init__.py  actions.py  analysis.py  chat.py  common.py  document.py  email.py  sidebar.py  voice.py
ui_components/: display_helpers.py  prompt_ui.py
utils/: prompt_personalizer.py
